--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -1,6 +1,7 @@
 \begin{landscape}
 \appendix
-\chapter*{Appendix A: R2RSRV}
+\chapter*{\uppercase{Appendix}}
+\section{R2RSRV}
 \begin{table}[H]
     \centering
     \small  
@@ -34,6 +35,36 @@
     \end{tabular}
     \label{table:r2r}
 \end{table}
-\end{landscape}
 
+\section{Proteins Description}
+\begin{table}[H]
+    \caption[Protein Description]{Description of proteins used in the thesis work. Source: https://www.ncbi.nlm.nih.gov/pubmed/ }
+    \label{table:protein descriptions}
+    \begin{longtable}{|p{1.5cm}|p{3.7cm}|p{18cm}|}
+        \hline
+        
+        Protein & Name & Description \\ \hline \toprule \hline
+        O00141 & Serine/threonine-protein kinase Sgk1 & Serine/threonine-protein kinase which is involved in the regulation of a wide variety of ion channels, membrane transporters, cellular enzymes, transcription factors, neuronal excitability, cell growth, proliferation, survival, migration and apoptosis. Plays an important role in cellular stress response. Contributes to regulation of renal Na+ retention, renal K+ elimination, salt appetite, gastric acid secretion, intestinal Na+/H+ exchange and nutrient transport, insulin-dependent salt sensitivity of blood pressure, salt sensitivity of peripheral glucose uptake, cardiac repolarization and memory consolidation. Phosphorylates SLC9A3/NHE3 in response to dexamethasone, resulting in its activation and increased localization at the cell membrane. Phosphorylates CREB1. Necessary for vascular remodeling during angiogenesis. Sustained high levels and activity may contribute to conditions such as hypertension and diabetic nephropathy. \\ \hline
+        O00443 & Phosphatidylinositol 4-phosphate 3-kinase C2 domain-containing subunit alpha & Generates phosphatidylinositol 3-phosphate (PtdIns3P) and phosphatidylinositol 3,4-bisphosphate (PtdIns(3,4)P2) that act as second messengers. Has a role in several intracellular trafficking events. Functions in insulin signaling and secretion. Required for translocation of the glucose transporter SLC2A4/GLUT4 to the plasma membrane and glucose uptake in response to insulin-mediated RHOQ activation. Regulates insulin secretion through two different mechanisms: involved in glucose-induced insulin secretion downstream of insulin receptor in a pathway that involves AKT1 activation and TBC1D4/AS160 phosphorylation, and participates in the late step of insulin granule exocytosis probably in insulin granule fusion. Synthesizes PtdIns3P in response to insulin signaling. Functions in clathrin-coated endocytic vesicle formation and distribution. Regulates dynamin-independent endocytosis, probably by recruiting EEA1 to internalizing vesicles. In neurosecretory cells synthesizes PtdIns3P on large dense core vesicles. Participates in calcium induced contraction of vascular smooth muscle by regulating myosin light chain (MLC) phosphorylation through a mechanism involving Rho kinase-dependent phosphorylation of the MLCP-regulatory subunit MYPT1. May play a role in the EGF signaling cascade. May be involved in mitosis and UV-induced damage response. Required for maintenance of normal renal structure and function by supporting normal podocyte function. Involved in the regulation of ciliogenesis and trafficking of ciliary components.  \\ \hline
+        % O15264 & Mitogen-activated protein kinase 13 & Serine/threonine kinase which acts as an essential component of the MAP kinase signal transduction pathway. MAPK13 is one of the four p38 MAPKs which play an important role in the cascades of cellular responses evoked by extracellular stimuli such as proinflammatory cytokines or physical stress leading to direct activation of transcription factors such as ELK1 and ATF2. Accordingly, p38 MAPKs phosphorylate a broad range of proteins and it has been estimated that they may have approximately 200 to 300 substrates each. MAPK13 is one of the less studied p38 MAPK isoforms. Some of the targets are downstream kinases such as MAPKAPK2, which are activated through phosphorylation and further phosphorylate additional targets. Plays a role in the regulation of protein translation by phosphorylating and inactivating EEF2K. Involved in cytoskeletal remodeling through phosphorylation of MAPT and STMN1. Mediates UV irradiation induced up-regulation of the gene expression of CXCL14. Plays an important role in the regulation of epidermal keratinocyte differentiation, apoptosis and skin tumor development. Phosphorylates the transcriptional activator MYB in response to stress which leads to rapid MYB degradation via a proteasome-dependent pathway. MAPK13 also phosphorylates and down-regulates PRKD1 during regulation of insulin secretion in pancreatic beta cells. \\ \hline
+        
+        \end{longtable}
     
+\end{table}
+
+\section{Drugs Description}
+
+\begin{table}[H]
+    \centering
+    \caption{Description of Drug Compounds.}
+    \begin{longtable}{|p{1.5cm}|p{3.7cm}|p{7cm}|p{1.5cm}|}
+    \hline
+    
+    Drug & Chemical Formula & Description  & Drug Bank ID \\ \hline
+    CHEMBL10 & C21H16FN3OS & This compound belongs to the class of organic compounds known as phenylimidazoles. These are polycyclic aromatic compounds containing a benzene ring linked to an imidazole ring through a CC or CN bond. & DB08521 \\ \hline
+    CHEMBL100050 & C17H19N8 & This compound belongs to the class of organic compounds known as benzimidazoles. These are organic compounds containing a benzene ring fused to an imidazole ring (five member ring containing a nitrogen atom, 4 carbon atoms, and two double bonds). & DB01705 \\ \hline
+    
+    \end{longtable}
+\end{table}
+
+\end{landscape}
