--- a/bibliography/glossary.tex
+++ b/bibliography/glossary.tex
@@ -1,5 +1,5 @@
-\usepackage[acronyms]{glossaries}
-\makeglossaries
+
+
 
 \newglossaryentry{latex}
 {
@@ -37,3 +37,8 @@
 \newacronym{rnn}{RNN}{Recursive Neural Network}
 \newacronym{et}{ET}{Evolutionary Transformation}
 \newacronym{featdti}{FeatDTI}{Feature Based Drug Target Interaction}
+\newacronym{sgd}{SGD}{Stochastic Gradient Descent}
+\newacronym{adam}{Adam}{Adaptive Moment Estimation}
+\newacronym{adagrad}{AdaGrad}{Adaptive Gradient Algorithm}
+\newacronym{rmsprop}{RMSProp}{Root Mean Squared Propagation}
+\newacronym{kde}{KDE}{Kernel Density Estimation}
