--- a/bibliography/sample.bib
+++ b/bibliography/sample.bib
@@ -658,7 +658,7 @@ title = {{Protein structure prediction using Rosetta in CASP12}},
 url = {http://doi.wiley.com/10.1002/prot.25390},
 volume = {86},
 year = {2018}
-}
+} 
 @article{La2013,
 abstract = {Protein-protein interactions (PPIs) are involved in diverse functions in a cell. To optimize functional roles of interactions, proteins interact with a spectrum of binding affinities. Interactions are conventionally classified into permanent and transient, where the former denotes tight binding between proteins that result in strong complexes, whereas the latter compose of relatively weak interactions that can dissociate after binding to regulate functional activity at specific time point. Knowing the type of interactions has significant implications for understanding the nature and function of PPIs. In this study, we constructed amino acid substitution models that capture mutation patterns at permanent and transient type of protein interfaces, which were found to be different with statistical significance. Using the substitution models, we developed a novel computational method that predicts permanent and transient protein binding interfaces (PBIs) in protein surfaces. Without knowledge of the interacting partner, the method uses a single query protein structure and a multiple sequence alignment of the sequence family. Using a large dataset of permanent and transient proteins, we show that our method, BindML+, performs very well in protein interface classification. A very high area under the curve (AUC) value of 0.957 was observed when predicted protein binding sites were classified. Remarkably, near prefect accuracy was achieved with an AUC of 0.991 when actual binding sites were classified. The developed method will be also useful for protein design of permanent and transient PBIs. {\textcopyright} 2013 Wiley Periodicals, Inc.},
 author = {La, David and Kong, Misun and Hoffman, William and Choi, Youn Im and Kihara, Daisuke},
@@ -1257,4 +1257,47 @@ school = {Institute of Engineering, Tribhuwan University},
 title = {{PDTI-DBN: PREDICTING DRUG AND TARGET INTERACTION USING DEEP BELIEF NETWORK}},
 volume = {659},
 year = {2016}
+}
+
+@article{Wishart2018,
+author = {Wishart, David S and Feunang, Yannick D and Guo, An C and Lo, Elvis J and Marcu, Ana and Grant, Jason R and Sajed, Tanvir and Johnson, Daniel and Li, Carin and Sayeeda, Zinat and Assempour, Nazanin and Iynkkaran, Ithayavani and Liu, Yifeng and Maciejewski, Adam and Gale, Nicola and Wilson, Alex and Chin, Lucy and Cummings, Ryan and Le, Diana and Pon, Allison and Knox, Craig and Wilson, Michael},
+doi = {10.1093/nar/gkx1037},
+issn = {0305-1048},
+journal = {Nucleic Acids Res.},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction},
+month = {jan},
+number = {D1},
+pages = {D1074--D1082},
+title = {{DrugBank 5.0: a major update to the DrugBank database for 2018}},
+url = {http://academic.oup.com/nar/article/46/D1/D1074/4602867},
+volume = {46},
+year = {2018}
+}
+@article{Sharma2010,
+author = {Sharma, Vineet K. and Kumar, Naveen and Prakash, Tulika and Taylor, Todd D.},
+doi = {10.1093/nar/gkp1001},
+issn = {0305-1048},
+journal = {Nucleic Acids Res.},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction},
+month = {jan},
+number = {suppl{\_}1},
+pages = {D468--D472},
+title = {{MetaBioME: a database to explore commercially useful enzymes in metagenomic datasets}},
+url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkp1001},
+volume = {38},
+year = {2010}
+}
+@article{Hecker2012,
+author = {Hecker, N. and Ahmed, J. and von Eichborn, J. and Dunkel, M. and Macha, K. and Eckert, A. and Gilson, M. K. and Bourne, P. E. and Preissner, R.},
+doi = {10.1093/nar/gkr912},
+issn = {0305-1048},
+journal = {Nucleic Acids Res.},
+mendeley-groups = {Protein{\_}Drug{\_}Interaction},
+month = {jan},
+number = {D1},
+pages = {D1113--D1117},
+title = {{SuperTarget goes quantitative: update on drug-target interactions}},
+url = {https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkr912},
+volume = {40},
+year = {2012}
 }
