--- a/frontmatter/3-dedication.tex
+++ b/frontmatter/3-dedication.tex
@@ -2,8 +2,8 @@
 
 
 \chapter*{Recommendation}
-\vspace{3cm}
-The undersigned certify that they have read and recommended to the Department of Electronics and Computer Engineering for acceptance, a thesis entitled “\textit{\thetitle}”, submitted by \theauthor in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering.
+
+The undersigned certify that they have read and recommended to the Department of Electronics and Computer Engineering for acceptance, a thesis entitled “\textit{\thetitle}”, submitted by {\theauthor} in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering.
 
 \vspace{3cm}
 ..........................................
@@ -34,7 +34,7 @@ Name:
 \textit{(Use letter department’s letter pad for this page)}
 \vspace{3cm}
 
-The thesis entitled "\thetitle", submitted by \theauthor in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering” has been accepted as a bonafide record of work independently carried out by him in the department.
+The thesis entitled "\thetitle", submitted by {\theauthor} in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering” has been accepted as a bonafide record of work independently carried out by him in the department.
 
 
 
