--- a/frontmatter/titlepages/finalproject.tex
+++ b/frontmatter/titlepages/finalproject.tex
@@ -21,7 +21,7 @@
   
   { \large 
     \emph{Student:} \\	
-      \theauthor \\
+      {\theauthor} \\
     \vspace*{0.5cm}
     \emph{Academic Advisers:} \\													  
       \myadvisorA \\
