--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 %%%%%%%%%%%%%%%%% DOCUMENT TYPE DEFINITION
 
-\documentclass[openright, hidelinks, a4paper, twoside, openany, 12pt]{report}
+\documentclass[openright, hidelinks, a4paper, twoside, openany, 12pt]{report} 
 
 %%%%%%%%%%%%%%%%% END OF DOCUMENT TYPE DEFINITION
 \input{self_package.tex}
@@ -76,6 +76,7 @@
 \cleardoublepage
 \linespread{2}
 \input{mainmatter/common.tex}
+\input{bibliography/glossary.tex}
 
 
 % \renewcommand*{\thesubfloat}{\Alph{subfloat}}
