--- a/mainmatter/5-Conclusion/conclusion.tex
+++ b/mainmatter/5-Conclusion/conclusion.tex
@@ -5,7 +5,7 @@ The research was conducted for series of experiments using different CNN archite
 Finally, it concludes that:
 \begin{itemize}
     \item Proteins need to be represented in higher dimensions of R2RSRV factors and the domain representation by using PSSM features along with the sequence information for formulating protein-solving network architecture.
-    \item Same filter size of 8 can be used to train the CNN layer for both proteins and drugs.
+    \item A deep learning network architecture consisting of three stacked \acrfull{cnn} was designed. The optimized network has \acrshort{cnn} with filter length of size 8 and three sets of stacked \acrshort{cnn} layers. The generalization of learned features was obtained with stacked dense layers.
 \end{itemize}
 
 \chapter{Recommendations}
