--- a/frontmatter/titlepages/copyright.tex
+++ b/frontmatter/titlepages/copyright.tex
@@ -1,13 +1,12 @@
 \chapter*{Copyright}
 \doublespacing
-\vspace{3cm}
 
 The author has agreed that the library, Department of Electronics and Computer Engineering,
 Institute of Engineering, Pulchowk Campus, may make this thesis freely available for inspection. Moreover the author has agreed that the permission for extensive copying of this thesis work for scholarly purpose may be granted by the professor(s), who supervised the thesis work recorded herein or, in their absence, by the Head of the Department, wherein this thesis was done. It is understood that the recognition will be given to the author of this thesis and to the Department of Electronics and Computer Engineering, Pulchowk Campus in any use of the material of this thesis. Copying of publication or other use of this thesis for financial gain without approval of the Department of Electronics and Computer Engineering, Institute of Engineering, Pulchowk Campus and author’s written permission is prohibited.
 
 Request for permission to copy or to make any use of the material in this thesis in whole or part should be addressed to:
 
-
+{\vspace{3cm}}
 
 Head
 
