--- a/self_package.tex
+++ b/self_package.tex
@@ -4,3 +4,8 @@
 \usepackage{sectsty}
 \usepackage[round]{natbib} 
 % \usepackage{apalike}
+\usepackage[acronyms]{glossaries}
+\makeglossaries
+
+\usepackage{longtable}
+\usepackage{csquotes}
