--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -1,6 +1,6 @@
 \begin{landscape}
 \appendix
-\chapter*{\uppercase{Appendix}}
+\chapter{appendix}
 \section{R2RSRV}
 \begin{table}[H]
     \centering
@@ -33,7 +33,7 @@
             R&-2.14&-1.42&0.19&-1.33&-0.84&-1.51&-2.74&1.22&-0.74&-0.38&4.08&-0.33&-0.40&-0.06&3.45&0.24&2.73&-0.43&-3.54&0.73 \\ \hline
         
     \end{tabular}
-    \label{table:r2r}
+    \label{table:r2r} 
 \end{table}
 
 \section{Proteins Description}
